[tool.poetry]
name = "arbitrage-bot"
version = "0.1.0"
description = "A bot to detect and alert arbitrage betting opportunities"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"
selenium = "^4.29.0"
waitress = "^3.0.0"  # Added waitress for production WSGI server

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
