[tool.poetry]
name = "arbitrage-bot"
version = "0.1.0"
description = "A bot to detect and alert arbitrage betting opportunities across multiple platforms."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/arbitrage-bot"
repository = "https://github.com/yourusername/arbitrage-bot"
keywords = ["arbitrage", "betting", "selenium", "automation"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"
selenium = "^4.29.0"
waitress = "^3.0.0"  # Added waitress for production WSGI server
schedule = "^1.2.0"  # For periodic task scheduling
python-dotenv = "^1.0.0"  # For loading environment variables

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^4.0.0"  # For test coverage reporting
black = "^23.0.0"  # For code formatting
flake8 = "^6.0.0"  # For linting

[tool.poetry.scripts]
arbitrage-bot = "main:main"  # Command to run the bot
test = "pytest"  # Command to run tests

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
